PROJECT(ShapeFeatures3D)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
SET(CMAKE_BUILD_TYPE RelWithDebInfo)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++0x -Wall -Wextra -Werror")
ADD_EXECUTABLE(ShapeFeatures3D ShapeFeatures3D.cxx )
TARGET_LINK_LIBRARIES(ShapeFeatures3D ${ITK_LIBRARIES})


